CB-24220 Follow redirects of image catalog url